# cs3502

./: CMakeLists.txt  driver.cpp  full  full_output.txt
RESULTS/: testing
RESULTS/PAGING/QUAD_CORE/FCFS/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
RESULTS/PAGING/QUAD_CORE/PRI/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
RESULTS/PAGING/QUAD_CORE/SJF/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
RESULTS/PAGING/SINGLE_CORE/FCFS/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
RESULTS/PAGING/SINGLE_CORE/PRI/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
RESULTS/PAGING/SINGLE_CORE/SJF/: page_faults  page_used  pcb_summary  times_blocked  times_fault_service  times_off_cpu  times_on_cpu  times_running
cpu/: cpu.cpp  cpu.h  cpu_control.cpp  cpu_control.h  cpu_types.h  pcb.cpp  pcb.h
cpu/test/: cpu_test_main.cpp  cpu_test_ram.cpp  cpu_test_ram.h
cpu/types/: cpu_types.h  instr_types.h
disk/: disk.cpp  disk.h
dispatcher/: dispatcher.cpp  dispatcher.h
justtrying/: whatever.cpp  whatever.h
loader/: loader.cpp  loader.h
log/: log_error.cpp  log_error.h  log_status.cpp  log_status.h  logger.cpp  logger.h
pcb/: page_table.cpp  page_table.h  pcb.cpp  pcb.h  pcb_control.cpp  pcb_control.h  pcb_node.h  pcb_types.h
pcb/page_table/: page_table.cpp  page_table.h  page_table_entry.cpp  page_table_entry.h
ram/: ram.cpp  ram.h
sched/: sched_control.cpp  sched_control.h  sched_types.h
sched/long/: longterm.cpp  longterm.h
sched/short/: shortterm.cpp  shortterm.h
scheduler/: dispatch.h  loader.cpp  short-term.cpp  short-term.h
scheduler/long/: longterm.cpp  longterm.h
scheduler/short/: shortterm.cpp  shortterm.h
storage/: page_frame.h  page_manager.cpp  page_manager.h
storage/disk/: disk.cpp  disk.h
storage/ram/: ram.cpp  ram.h
utils/: base_conversions.h  custom_clock.cpp  custom_clock.h  lock.cpp  lock.h  memcpy.cpp  memcpy.h  queue.cpp  queue.h
